completed JWT auth
