# doc/response.go
@@ -1,7 +1,8 @@
-package handler
+package doc
 
 import (
 	"bytes"
+
 	"github.com/malkev1ch/first-task/internal/model"
 )
 
@@ -47,12 +48,72 @@ type ErrorResponseBody struct {
 
 // swagger:parameters UploadCatImage
 type UploadCatImageParam struct {
-	//MyFormFile desc.
+	// MyFormFile desc.
 	//
 	// in:formData
 	//
 	// swagger:file
 	MyFormFile *bytes.Buffer `json:"image"`
+}
+
+// swagger:parameters SignUp
+type SignUpParam struct {
+	// in:body
+	// required:true
+	Body model.CreateUser `json:"body"`
+}
+
+// A SignUpResponse returns a couple of token with user id.
+//
+// swagger:response signUpResponse
+type SignUpResponse struct {
+	// The response message
+	// in: body
+	Body SignUpResponseBody `json:"body"`
+}
+
+type SignUpResponseBody struct {
+	Tokens model.Tokens `json:"tokens"`
+}
+
+// swagger:parameters SignIn
+type SignInParam struct {
+	// in:body
+	// required:true
+	Body model.AuthUser `json:"body"`
+}
+
+// A SignInResponse returns a couple of token with user id.
+//
+// swagger:response signInResponse
+type SignInResponse struct {
+	// The response message
+	// in: body
+	Body SignInResponseBody `json:"body"`
+}
+
+type SignInResponseBody struct {
+	Tokens model.Tokens `json:"tokens"`
+}
+
+// swagger:parameters RefreshToken
+type RefreshTokenParam struct {
+	// in:body
+	// required:true
+	Body model.AuthUser `json:"body"`
+}
+
+// A RefreshTokenResponse returns a couple of token with user id.
+//
+// swagger:response refreshTokenResponse
+type RefreshTokenResponse struct {
+	// The response message
+	// in: body
+	Body SignUpResponseBody `json:"body"`
+}
+
+type RefreshTokenResponseBody struct {
+	Tokens model.Tokens `json:"tokens"`
 }
 
 // InternalServerError is a general error indicating something went wrong internally.
